--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,18 +8,18 @@ jobs:
   terraform:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - checkout: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Terraform
+      - set-up: Setup Terraform
         uses: hashicorp/setup-terraform@v1
 
-      - name: Terraform Init
+      - initialize-terraform: Terraform Init
         run: terraform init
 
-      - name: Terraform Plan
+      - view-terraform-plan: Terraform Plan
         run: terraform plan
 
-      - name: Terraform Apply
+      - applying-configuration: Terraform Apply
         run: terraform apply -auto-approve
 
